# ettention

./: .gitignore  CMakeLists.txt  README.md  create_solution.bat  create_solution.cmd  create_solution_msvc2013_x64.bat  create_solution_msvc2013_x86.bat  dependencies_version.txt  get_dependencies.bat  upload_distribution.bat
buildTools/compile_kernel/: CMakeLists.txt
ettention/buildTools/bin2c/: CMakeLists.txt  bin2c.cpp
ettention/buildTools/compileKernel/: CMakeLists.txt  CompileKernel.cpp
ettention/frontend/: CMakeLists.txt
ettention/frontend/src/: main.cpp  stdafx.h
ettention/frontend/src/setup/: CommandLineToolParameterSource.cpp  CommandLineToolParameterSource.h
ettention/libReconstruction/: CMakeLists.txt
ettention/libReconstruction/ocl_src/: AccumulateVolume.cl  BilinearInterpolation.hl  BlobRaytracer.hl  BorderSegmentVolume.cl  BorderSegmentation.cl  BufferRMS.cl  CircularityRejection.cl  ColumnAverage.cl  Compare.cl  ComplexMultiply.cl  ComputeRayLength.cl  CroppingForFFT.cl  CrosscorrelationClampingFunction.cl  CrosscorrelationWarpingFunction.cl  DDARaytracer.hl  DetectorCao.cl  Dilation.cl  EigenValues2x2.cl  Erosion.cl  FFTMagnitude.cl  Gaussian2ord.cl  GenerateRamLakKernel.cl  GlobalMaximumPosition.cl  GlobalMinimumPosition.cl  GlobalMinimumPositionC.cl  HalfFloatSupport.hl  HalfFloatTest.cl  ImageConvolution.cl  ImageHandler.hl  InputProjection.cl  LocalMaximumSimple.cl  LocalMaximumSpiral.cl  Math.hl  Matrix4x4.hl  Mean.cl  MoveOriginToCenter.cl  Multiply.cl  NormalizedCrossCorrelation.cl  PaddingForFFT.cl  ParallelBeamsBackProjection.cl  (+17 more)
ettention/libReconstruction/src/: ExternalIncludes.h  PreMemoryManagerIncludes.h  stdafx.h
ettention/libReconstruction/src/algorithm/blobs/: BlobRayIntegrationSampler.cpp  BlobRayIntegrationSampler.h  BlobVoxelizationKernelValues.cpp  BlobVoxelizationKernelValues.h  BlobVoxelizerOperator.cpp  BlobVoxelizerOperator.h
ettention/libReconstruction/src/algorithm/imagemanipulation/: BorderSegmentKernel.cpp  BorderSegmentKernel.h  CaoDetectorKernel.cpp  CaoDetectorKernel.h  CompareKernel.cpp  CompareKernel.h  ComplexMultiplyKernel.cpp  ComplexMultiplyKernel.h  GenerateGausssian2ordKernel.cpp  GenerateRamLakFilterKernel.cpp  GenerateRamLakFilterKernel.h  MissingWedgeImageGenerator.cpp  MissingWedgeImageGenerator.h  MultiplyKernel.cpp  MultiplyKernel.h  PSFShiftingKernel.cpp  PSFShiftingKernel.h  RMSKernel.cpp  RMSKernel.h  SquareKernel.cpp  SquareKernel.h  ThresholdKernel.cpp  ThresholdKernel.h  ThresholdWithHysteresisKernel.cpp  ThresholdWithHysteresisKernel.h
ettention/libReconstruction/src/algorithm/imagestatistics/: CircularityRejectionKernel.cpp  CircularityRejectionKernel.h  ColumnAverageKernel.cpp  ColumnAverageKernel.h  DeviationOperator.cpp  DeviationOperator.h  MeanKernel.h  MeanOperator.cpp  MeanOperator.h  OtsuThresholdDecider.h  ThresholdDecider.cpp
ettention/libReconstruction/src/algorithm/longobjectcompensation/: ComputeRayLengthKernel.cpp  ComputeRayLengthKernel.h  InputProjectionKernel.cpp  (+5 more)
ettention/libReconstruction/src/framework/: Coordinates.cpp  Coordinates.h  FileAlgorithms.cpp  FileAlgorithms.h  Framework.cpp  Framework.h  LeastSquaresLinearFit.cpp  LeastSquaresLinearFit.h  Logger.cpp  Logger.h  NumericalAlgorithms.cpp  NumericalAlgorithms.h  ProgressLogger.cpp  ProgressLogger.h  RandomAlgorithms.cpp  RandomAlgorithms.cpp.orig  RandomAlgorithms.h  VectorAlgorithms.cpp  VectorAlgorithms.h
ettention/libReconstruction/src/gpu/: ComputeKernel.cpp  ComputeKernel.h  GPUMapped.cpp  GPUMapped.h  ImageProcessingKernel.cpp  ImageProcessingKernel.h  SingleInstanceTimestamps.cpp  SingleInstanceTimestamps.h  VectorAdaptor.cpp  VectorAdaptor.h
ettention/libReconstruction/src/io/: HyperStackIndex.cpp  HyperStackIndex.h  ImageStackDataSourceFactory.cpp  ImageStackDataSourceFactory.h
ettention/libReconstruction/src/setup/: ParameterStorage.cpp
ettention/memoryManager/: CMakeLists.txt
ettention/memoryManager/src/memory/: MemoryLeakDetection.cpp  MemoryLeakDetection.h  MemoryListener.cpp  MemoryListener.h  MemoryManager.cpp  MemoryManager.h
ettention/plugins/EtomoPlugin/: CMakeLists.txt
ettention/plugins/EtomoPlugin/src/: EtomoPlugin.cpp  EtomoPlugin.h
ettention/plugins/EtomoPlugin/test/: CMakeLists.txt
ettention/plugins/STEMPlugin/test/: CMakeLists.txt
ettention/plugins/WBPPlugin/: CMakeLists.txt
ettention/plugins/WBPPlugin/src/: WBPPlugin.cpp  WBPPlugin.h
ettention/plugins/WBPPlugin/test/: CMakeLists.txt
gtest-1.6.0/: CMakeLists.txt
gtest-1.6.0/lib/x86/Debug/: gtestd.lib
gtest-1.6.0/src/: gtest.cc
gtest-1.6.0/tmp/x86/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.write.1.tlog  Lib.read.1.tlog  cl.command.1.tlog  gtest.lastbuildstate  lib.command.1.tlog  vc110.idb
phantomGenerator/: CMakeLists.txt
phantomGenerator/src/: GenerateVolumeParameterSource.cpp  GenerateVolumeParameterSource.h  generateVolume.cpp  stdafx.h
phantomGenerator/src/phantom/: ClusteredParticlesShape.cpp  ClusteredParticlesShape.h  ComposedShape.cpp  ComposedShape.h  Diagonal3Shape.cpp  Diagonal3Shape.h  EllipsoidShape.cpp  EllipsoidShape.h  PlottableShape.cpp  PlottableShape.h  SheppLoganShape.cpp  SheppLoganShape.h
plugins/STEMPlugin/test/: CMakeLists.txt
plugins/STEMPlugin/test/src/: STEMPluginTest.cpp
plugins/YourNewPlugin/: CMakeLists.txt
plugins/YourNewPlugin/src/: YourNewPlugin.cpp  YourNewPlugin.h
plugins/YourNewPlugin/test/: CMakeLists.txt
plugins/YourNewPlugin/test/src/: YourNewPluginTest.cpp
projectionGenerator/: CMakeLists.txt
projectionGenerator/src/: GenerateProjectionsParameterSource.cpp  GenerateProjectionsParameterSource.h  conio_linux.h  generateProjections.cpp  stdafx.h
projectionGenerator/src/projection_pattern/: FocalStackProjectionPattern.cpp  FocalStackProjectionPattern.h  ProjectionPattern.cpp  ProjectionPattern.h  SpiralProjectionPattern.cpp  SpiralProjectionPattern.h
reconstructConsoleApp/: CMakeLists.txt
reconstructConsoleApp/src/: main.cpp  stdafx.h
reconstructConsoleApp/src/setup/: CommandLineToolParameterSource.cpp  CommandLineToolParameterSource.h
(+1827 files in other folders)
